Working DB connector with saving and retrieving by date

--- a/Desktop/Uni/SoSe23/Scientific Python/FinalProject/Scraper.ipynb
+++ b/Desktop/Uni/SoSe23/Scientific Python/FinalProject/Scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,290 +70,15 @@
      "output_type": "stream",
      "text": [
       "We found 283 categories for women on vinted that we can scrape\n",
-      "We found 190 categories for men vinted that we can scrape\n",
-      "/damen/kleidung/tops-and-t-shirts/blusen\n",
-      "/damen/schuhe/sandalen-pantoletten-and-badelatschen/badelatschen\n",
-      "/damen/kleidung/tops-and-t-shirts/shirts\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/collegejacken\n",
-      "/damen/kleidung/tops-and-t-shirts\n",
-      "/damen/taschen/portemonnaies\n",
-      "/damen/kleidung/activewear/accessoires/uhren-and-armbander\n",
-      "/damen/kleidung/mutterschaftskleidung/kleider\n",
-      "/damen/accessoires\n",
-      "/damen/schuhe/stiefel/kniehohe-stiefel\n",
-      "/damen/taschen/folkloretaschen\n",
-      "/damen/schuhe/sportschuhe/wander-and-trekkingschuhe\n",
-      "/damen/kleidung/kleider/fur-anlasse/hochzeitskleider\n",
-      "/damen/accessoires/tucher-and-schals/strickschals\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/strickjacken\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/kimonos\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/strumpfhosen\n",
-      "/damen/accessoires/haarschmuck\n",
-      "/damen/accessoires/technische-accessoires\n",
-      "/damen/kleidung/shorts/jeansshorts\n",
-      "/damen/kleidung/umstandskleidung/mantel-and-jacken\n",
-      "/damen/kleidung/tops-and-t-shirts/schulterfreie-tops\n",
-      "/damen/kleidung/activewear/accessoires/schutzer\n",
-      "/damen/kleidung/hosen-and-leggings/hosen-mit-weitem-bein\n",
-      "/damen/schuhe/flache-schuhe/schnurschuhe\n",
-      "/damen/kleidung/hosen-and-leggings/lederhosen\n",
-      "/damen/kleidung/shorts/shorts-mit-hoher-taille\n",
-      "/damen/pflege-and-beauty/korperpflege\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/sets\n",
-      "/damen/accessoires/uhren\n",
-      "/damen/kleidung/bademode/strandblusen-and-sarongs\n",
-      "/damen/taschen/umhangetaschen\n",
-      "/damen/kleidung/tops-and-t-shirts/langarmelige-blusen\n",
-      "/damen/accessoires/hute-and-mutzen/stirnbander\n",
-      "/damen/kleidung/hosen-and-leggings/sonstiges\n",
-      "/damen/accessoires/hute-and-mutzen/sonstiges\n",
-      "/damen/kleidung/kleider\n",
-      "/damen/kleidung/kleider/sommerkleider\n",
-      "/damen/kleidung/mutterschaftskleidung/hosen\n",
-      "/damen/kleidung/hosen-and-leggings/dreiviertel-hosen-and-chinos\n",
-      "/damen/kleidung/kleider/fur-besondere-anlasse\n",
-      "/damen/kleidung/shorts\n",
-      "/damen/kleidung/activewear/sonstiges\n",
-      "/damen/pflege-and-beauty/parfums\n",
-      "/damen/kleidung/jeans/jeans-mit-hoher-taille\n",
-      "/damen/accessoires/schmuck/schmucksets\n",
-      "/damen/kleidung/mantel-and-jacken/trenchcoats\n",
-      "/damen/kleidung/activewear/accessoires/handschuhe\n",
-      "/damen/kleidung/tops-and-t-shirts/bauchfreie-tops\n",
-      "/damen/kleidung/sonstiges\n",
-      "/damen/kleidung/bademode/sonstiges\n",
-      "/damen/kleidung/blazer-and-anzuge/hosenanzuge\n",
-      "/damen/kleidung/jeans/boyfriend-jeans-1839\n",
-      "/damen/schuhe\n",
-      "/damen/accessoires/hute-and-mutzen-231\n",
-      "/damen/accessoires/schmuck/fusskettchen\n",
-      "/damen/beauty/beauty-zubehor/nagelpflege-and-zubehor\n",
-      "/damen/schuhe/flache-schuhe/mary-janes\n",
-      "/damen/schuhe/sportschuhe\n",
-      "/damen/kleidung/activewear/hosen-and-leggins\n",
-      "/damen/kleidung/shorts/schnurshorts\n",
-      "/damen/kleidung/activewear/kleider\n",
-      "/damen/schuhe/hausschuhe-pantoffeln-and-slipper\n",
-      "/damen/kleidung/activewear/shorts\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/sweater/pullover-mit-v-ausschnitt\n",
-      "/damen/kleidung/activewear/accessoires/hute\n",
-      "/damen/taschen/clutches\n",
-      "/damen/kleidung/activewear/accessoires/andere-accessoires\n",
-      "/damen/kleidung/blazer-and-anzuge/einzelne-anzugteile\n",
-      "/damen/schuhe/sportschuhe/motorradstiefel\n",
-      "/damen/pflege-and-beauty/gesichtspflege\n",
-      "/damen/kleidung/mantel-and-jacken/jacken/bomberjacken\n",
-      "/damen/kleidung/jacken-and-mantel/westen\n",
-      "/damen/kleidung/kleider/jeanskleider\n",
-      "/damen/kleidung/mantel-and-jacken/mantel/regenmantel\n",
-      "/damen/beauty/make-up\n",
-      "/damen/kleidung/rocke/skater-rocke\n",
-      "/damen/kleidung/tops-and-t-shirts/sonstiges\n",
-      "/damen/beauty/beautyartikel/haarstyling-zubehor\n",
-      "/damen/schuhe/stiefel\n",
-      "/damen/kleidung/activewear/accessoires/schals\n",
-      "/damen/kleidung/mutterschaftskleidung/unterwasche/schwangerschafts-and-postpartum-gurtel\n",
-      "/damen/accessoires/tucher-and-schals\n",
-      "/damen/accessoires/schmuck/broschen\n",
-      "/damen/kleidung/activewear/rocke\n",
-      "/damen/schuhe/stiefel/halbhohe-stiefel\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/sweater/lange-pullover\n",
-      "/damen/taschen/kosmetiktaschen\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/daunenjacken\n",
-      "/damen/schuhe/sportschuhe/hallenfussballschuhe\n",
-      "/damen/kleidung/kleider/midikleider\n",
-      "/damen/accessoires/hute-and-mutzen/baretts\n",
-      "/damen/schuhe/stiefel/overknees\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/westen\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/slips\n",
-      "/damen/kleidung/rocke/rocke-mit-hoher-taille\n",
-      "/damen/kleidung/jumpsuits-and-playsuits/einteiler\n",
-      "/damen/kleidung/activewear/oberteile-and-t-shirts\n",
-      "/damen/kleidung/jeans/sonstiges\n",
-      "/damen/kleidung/rocke/midirocke\n",
-      "/damen/kleidung/tops-and-t-shirts/westen\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/socken\n",
-      "/damen/kleidung/jeans/ripped-jeans\n",
-      "/damen\n",
-      "/damen/schuhe/sportschuhe/fahrradschuhe\n",
-      "/damen/accessoires/tucher-and-schals/sonstiges\n",
-      "/damen/kleidung/activewear/trainingsanzuge\n",
-      "/damen/kleidung/shorts/knielange-shorts\n",
-      "/damen/schuhe/sportschuhe/golfschuhe\n",
-      "/damen/accessoires/hute-and-mutzen\n",
-      "/damen/kleidung\n",
-      "/damen/accessoires/hute-and-mutzen/mutzen\n",
-      "/damen/kleidung/kleider/maxikleider\n",
-      "/damen/kleidung/activewear/bhs\n",
-      "/damen/schuhe/flache-schuhe-1909\n",
-      "/damen/accessoires/schlusselanhanger\n",
-      "/damen/taschen/reisetaschen\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/windbreaker\n",
-      "/damen/kleidung/kleider/fur-besondere-anlasse/abschlussballkleider\n",
-      "/damen/kleidung/tops-and-t-shirts/neckholder-tops\n",
-      "/damen/kleidung/blazer-and-anzuge/andere-anzuge-and-blazer\n",
-      "/damen/kleidung/hosen-and-leggings\n",
-      "/damen/kleidung/hoodies-and-pullover\n",
-      "/damen/kleidung/rocke/faltenrocke\n",
-      "/damen/kleidung/umstandskleidung\n",
-      "/damen/kleidung/kleider/fur-anlasse/abendkleider\n",
-      "/damen/kleidung/activewear/hoodies-and-langarmshirts\n",
-      "/damen/kleidung/jacken-and-mantel/mantel/klassische-and-lange-mantel\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/sonstiges\n",
-      "/damen/kleidung/shorts/capri-hosen\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/accessoires-fur-dessous\n",
-      "/damen/schuhe/sandalen-pantoletten-and-badelatschen/flache-sandalen\n",
-      "/damen/accessoires/hute-and-mutzen/warme-mutzen\n",
-      "/damen/accessoires/sonstige-accessoires\n",
-      "/damen/kleidung/mutterschaftskleidung/overalls-fur-schwangere\n",
-      "/damen/schuhe/absatzschuhe/sandalen-mit-absatz\n",
-      "/damen/schuhe/sandalen-pantoletten-and-badelatschen\n",
-      "/damen/kleidung/mutterschaftskleidung/pullover-und-jacken\n",
-      "/damen/kleidung/jeans/cropped-jeans\n",
-      "/damen/kleidung/activewear/accessoires\n",
-      "/damen/kleidung/tops-and-t-shirts/tragerhemden\n",
-      "/damen/kleidung/blazer-and-anzuge/kostume-und-abendanzuge\n",
-      "/damen/kleidung/mutterschaftskleidung/unterwasche/umstandsunterwasche\n",
-      "/damen/kleidung/jeans\n",
-      "/damen/schuhe/absatzschuhe\n",
-      "/damen/kleidung/jacken-and-mantel/mantel/dufflecoats\n",
-      "/damen/kleidung/kostume-and-besonderes\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/boleros\n",
-      "/damen/accessoires/regenschirme\n",
-      "/damen/kleidung/rocke/tulpenrocke\n",
-      "/damen/kleidung/mutterschaftskleidung/unterwasche\n",
-      "/damen/pflege-and-beauty/nagelpflege\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/figur-formende-unterwasche\n",
-      "/damen/schuhe/stiefel/stiefeletten\n",
-      "/damen/schuhe/sportschuhe/rollschuhe-and-inlineskates\n",
-      "/damen/beauty/beautyartikel/gesichtspflege-zubehor\n",
-      "/damen/schuhe/sportschuhe/sportschuhe-fur-drinnen\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche\n",
-      "/damen/accessoires/sonnenbrillen\n",
-      "/damen/kleidung/rocke/trapezrocke\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/ski-and-snowboard-jacken\n",
-      "/damen/kleidung/shorts/cargoshorts\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/nachtwasche-and-pyjamas\n",
-      "/damen/kleidung/tops-and-t-shirts/t-shirts\n",
-      "/damen/kleidung/shorts/ledershorts\n",
-      "/damen/kleidung/mutterschaftskleidung/sportkleidung\n",
-      "/damen/kleidung/kleider/kleine-schwarze\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/sweater/three-fourths-armelige-pullover\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/hemdjacken\n",
-      "/damen/kleidung/tops-and-t-shirts/rollkragen\n",
-      "/damen/schuhe/sportschuhe/snowboard-boots\n",
-      "/damen/schuhe/sportschuhe/tennisschuhe\n",
-      "/damen/beauty\n",
-      "/damen/kleidung/hosen-and-leggings/hosen-nach-mass\n",
-      "/damen/schuhe/flache-schuhe/bootsschuhe-loafer-and-mokassins\n",
-      "/damen/pflege-and-beauty/sonstiges\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/bademantel\n",
-      "/damen/pflege-and-beauty/haarpflege\n",
-      "/damen/kleidung/hoodies-and-pullover/sweater/andere-pullover\n",
-      "/damen/kleidung/rocke/minirocke\n",
-      "/damen/kleidung/hosen-and-leggings/pluderhosen\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/steppjacken\n",
-      "/damen/kleidung/mutterschaftskleidung/rocke\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/sonstiges\n",
-      "/damen/kleidung/hosen-and-leggings/leggings\n",
-      "/damen/schuhe/sportschuhe/laufschuhe\n",
-      "/damen/accessoires/schmuck/ringe\n",
-      "/damen/accessoires/handschuhe\n",
-      "/damen/kleidung/hosen-and-leggings/rohrenhosen\n",
-      "/damen/kleidung/kleider/minikleider\n",
-      "/damen/kleidung/bademode/bikinis\n",
-      "/damen/kleidung/tops-and-t-shirts/kurzarmelige-blusen\n",
-      "/damen/kleidung/jumpsuits-and-playsuits/overalls\n",
-      "/damen/kleidung/jeans/rohrenjeans\n",
-      "/damen/kleidung/tops-and-t-shirts/tuniken\n",
-      "/damen/schuhe/sportschuhe/skistiefel\n",
-      "/damen/accessoires/schmuck/armbander\n",
-      "/damen/beauty/beauty-zubehor\n",
-      "/damen/schuhe/boots/gummistiefel\n",
-      "/damen/kleidung/umstandskleidung/shorts-and-capris\n",
-      "/damen/kleidung/activewear/accessoires/brillen\n",
-      "/damen/accessoires/tucher-and-schals/kopftucher\n",
-      "/damen/taschen/bauchtaschen\n",
-      "/damen/kleidung/mantel-and-jacken/mantel/cabans-and-kurzmantel\n",
-      "/damen/kleidung/kleider/fur-anlasse/ruckenfreie-kleider\n",
-      "/damen/taschen/weekender\n",
-      "/damen/accessoires/gurtel\n",
-      "/damen/kleidung/mantel-and-jacken-1907\n",
-      "/damen/kleidung/mantel-and-jacken/parkas\n",
-      "/damen/schuhe/sneaker\n",
-      "/damen/kleidung/shorts/sonstiges\n",
-      "/damen/pflege-and-beauty/handpflege\n",
-      "/damen/kleidung/jumpsuits-and-playsuits\n",
-      "/damen/kleidung/mutterschaftskleidung/unterwasche/schwangerschafts-and-still-bhs\n",
-      "/damen/schuhe/sportschuhe/schlittschuhe\n",
-      "/damen/kleidung/mantel-and-jacken/jacken/fleecejacken\n",
-      "/damen/kleidung/rocke/schlauchrocke\n",
-      "/damen/kleidung/jeans/schlaghosen\n",
-      "/damen/kleidung/kleider/tragerlose-kleider\n",
-      "/damen/kleidung/activewear/oberbekleidung\n",
-      "/damen/kleidung/mutterschaftskleidung/badekleidung\n",
-      "/damen/kleidung/mantel-and-jacken/jacken\n",
-      "/damen/schuhe/clogs\n",
-      "/damen/accessoires/schmuck\n",
-      "/damen/kleidung/shorts/shorts-mit-tiefer-taille\n",
-      "/damen/schuhe/flache-schuhe/ballerinas\n",
-      "/damen/taschen/handtaschen\n",
-      "/damen/schuhe/sportschuhe/kletterschuhe\n",
-      "/damen/accessoires/schmuck/ohrringe\n",
-      "/damen/kleidung/kleider/fur-anlasse/party-and-cocktail\n",
-      "/damen/kleidung/jeans/gerade-geschnittene-jeans\n",
-      "/damen/kleidung/rocke/bleistiftrocke\n",
-      "/damen/schuhe/sportschuhe/fussballschuhe\n",
-      "/damen/kleidung/kleider/formelle-and-business-kleider\n",
-      "/damen/kleidung/bademode/badeanzuge\n",
-      "/damen/accessoires/schmuck/ketten-and-anhanger\n",
-      "/damen/kleidung/mantel-and-jacken/mantel/teddymantel\n",
-      "/damen/kleidung/hoodies-and-pullover/hoodies-and-langarmshirts\n",
-      "/damen/beauty/beautyartikel/make-up-zubehor\n",
-      "/damen/kleidung/mantel-and-jacken/capes-and-ponchos\n",
-      "/damen/taschen/rucksacke\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/biker-and-racer-jacken\n",
-      "/damen/kleidung/hosen-and-leggings/gerade-geschnittene-hosen\n",
-      "/damen/kleidung/jumpsuits-and-playsuits/andere-jump-and-playsuits\n",
-      "/damen/accessoires/tucher-and-schals/schals\n",
-      "/damen/schuhe/sandalen-pantoletten-and-badelatschen/zehentrenner\n",
-      "/damen/kleidung/unterwasche-and-nachtwasche/bhs\n",
-      "/damen/kleidung/umstandskleidung/shirts-tops-and-blusen\n",
-      "/damen/schuhe/sportschuhe/basketballschuhe\n",
-      "/damen/kleidung/jacken-and-mantel/jacken/jacken-im-military-and-utility-stil\n",
-      "/damen/kleidung/mantel-and-jacken/jacken/jeansjacken\n",
-      "/damen/kleidung/tops-and-t-shirts/schosschentops\n",
-      "/damen/schuhe/sportschuhe/tanzschuhe\n",
-      "/damen/kleidung/mutterschaftskleidung/unterwasche/umstands-nachtwasche\n",
-      "/damen/kleidung/kleider/sonstiges\n",
-      "/damen/kleidung/rocke\n",
-      "/damen/kleidung/blazer-and-anzuge\n",
-      "/damen/taschen/tragetaschen\n",
-      "/damen/kleidung/jacken-and-mantel\n",
-      "/damen/schuhe/stiefel/arbeitsstiefel\n",
-      "/damen/beauty/beauty-zubehor/korperpflege-zubehor\n",
-      "/damen/kleidung/kleider/lassige-kleider\n",
-      "/damen/kleidung/tops-and-t-shirts/three-fourths-blusen\n",
-      "/damen/accessoires/schmuck/anderer-schmuck\n",
-      "/damen/kleidung/hoodies-and-pullover/sweater/strickpullover\n",
-      "/damen/schuhe/sportschuhe/schwimm-and-wasserschuhe\n",
-      "/damen/taschen\n",
-      "/damen/schuhe/stiefel/schneestiefel\n",
-      "/damen/schuhe/absatzschuhe/pumps\n",
-      "/damen/kleidung/rocke/sonstiges\n",
-      "/damen/kleidung/blazer-and-anzuge-532\n",
-      "/damen/kleidung/kleider/winterkleider\n",
-      "/damen/kleidung/activewear\n",
-      "/damen/kleidung/tops-and-t-shirts/bodys\n",
-      "/damen/taschen/beutel\n",
-      "/damen/kleidung/rocke/jeansrocke\n",
-      "/damen/schuhe/flache-schuhe/espadrilles\n",
-      "/damen/accessoires/tucher-and-schals/ubergrosse-tucher-and-schals\n",
-      "/damen/kleidung/hoodies-and-pullover/pullover\n",
-      "/damen/kleidung/rocke/maxi-rocke\n",
-      "/damen/kleidung/hoodies-and-langarmshirts/sweater/rollkragenpullover\n",
-      "/damen/taschen/sonstiges\n",
-      "/damen/kleidung/bademode\n"
+      "We found 190 categories for men vinted that we can scrape\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (2854411241.py, line 38)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"/var/folders/zs/bd_b6ytj5l916s0yf_qyvlp80000gq/T/ipykernel_10876/2854411241.py\"\u001b[0;36m, line \u001b[0;32m38\u001b[0m\n\u001b[0;31m    return cat_names_damen, cat_names_herren\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
@@ -487,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
